# dotfiles

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  \  backup-scoop.ps1  bootstrap.sh  bootstrap.sh.README.md  code.py  commands.zsh  comp.lua  config.nu  gitconfig  install.sh  installed-scoop.txt  installsnap.sh  login.sh  mc-music-extractor.sh  notepad.html  p10k.zsh  public.key  rc.vim  rc.zsh  scoop-buckets.json  scoop-buckets.txt  scoop-export.json  scoop-packages.json  scoop-packages.txt  setup.ps1  setup.sh  setup.zsh  zshrc  zshrc.sh  zshrc.zwc
cmd/: Cargo.toml
cmd/src/: consts.rs  main.rs
configs/: .gitignore  alacritty.deprecated.yml  alacritty.toml  alacritty.yml  bindkeys  config.nu  default-npm  env.nu  git.nix.properties  git.properties  git.win.properties  init.vim  p10k.zsh  rc.vim  rc.zsh  starship.toml  tools.txt  vimrc.vim  zsh.sh  zshrc.sh
env/: home.c
installer/src/: consts.rs  main.rs
scripts/: commit.sh  package.json  pnpm-lock.yaml  restore.ps1  setup-fedora.sh  setup.ps1  setup.sh  tsconfig.json
scripts/bookmarks/: README.md  bun.lockb  opencode.js  package.json  reverse.js  vite.config.ts
scripts/setup/: main.ts
scripts/src/: index.ts
setup/: .gitignore  Cargo.toml  __main__.py  build.rs  temp.py
setup/src/: consts.rs  macros.rs  main.rs  repo.rs  user.rs  utils.rs
setup/src/c/: admin.c
setup/src/sys/: package.rs
setup/src/utils/: admin.rs  consts.rs  fs.rs  git.rs  mod.rs  repo.rs  system.rs
src/: main.b  main.cpp  main.rs
src/include/: spinners.hpp
utils/: cmd-not-found.mjs  cmd-not-found.sh  commands.sh  commands.zsh  vars.zsh
vim/: functions.vim  rc.vim  shortcuts.vim
(+12 files in other folders)
