[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = { version = "0.8.23" }
directories = { version = "4.0.1" }
git2 = { version = "0.14.0" }
spinners = { version = "3.0.1" }