[package]
name = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
directories = "4.0.1"
duct = "0.13.5"
git2 = "0.14.3"
lazy_static = "1.4.0"
rand = "0.8.5"
smol = "1.2.5"
which = "4.2.5"

[build-dependencies]
cc = "1.0.73"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "0.3.9"
